fix: add smooth scrolling to chat messages on iOS

--- a/src/routes/chat/chatContent/successfulMatch/SuccessfulMatchContainer.scss
+++ b/src/routes/chat/chatContent/successfulMatch/SuccessfulMatchContainer.scss
@@ -11,7 +11,6 @@
   align-items: center;
 
   @media screen and (max-width: $mobile) {
-    padding: 0rem;
     padding-top: 0.5rem;
   }
 
